--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	],
 	"dependencies": {
 		"@types/three": "^0.148.0",
-		"skinview-utils": "^0.7.0",
+		"skinview-utils": "npm:@ubunterro/skinview-utils@^0.7.1",
 		"three": "^0.148.0"
 	},
 	"devDependencies": {
